--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <!-- Performance Hints -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <meta name="google-site-verification" content="Ep3lWwLZHAviFwGpQH9Rgzp158mI5dgdTdTYjGdWaHk" />
   </head>
   <body>
     <div id="root"></div>
