--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     
       gtag('config', 'G-G3EVHBQMJ7');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6902316452778520"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/coin-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
