--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/coin-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-adsense-account" content="ca-pub-6902316452778520">
     
     <!-- PWA Support -->
     <link rel="manifest" href="/manifest.json">
